@@ -77,6 +77,10 @@ https://github.com/networkupstools/nut/milestone/12
      of the existing mappings. Suggest how user can help improve the driver
      if too few data points were seen. [#3082, #3095]
 
+ - `upsdrvctl` tool updates:
+   * Make use of `setproctag()` and `getproctag()` to report parent/child
+     process names. [#3084]
+
  - `upslog` tool updates:
    * Updated `help()` and failure messages to suggest `-m '*,-'` for logging
      of all known local devices to stdout. [#3083]
